--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://rsms.me/inter/inter.css');
+
 * {
   box-sizing: border-box;
 }
@@ -17,20 +19,6 @@ body {
   font-family: 'Inter';
 }
 
-a {
-  color: black;
-}
-
-a {
-  pointer-events: all;
-  color: black;
-  text-decoration: none;
-}
-
-svg {
-  fill: black;
-}
-
 @keyframes fade-in {
   from {
     opacity: 0;
@@ -43,5 +31,5 @@ svg {
 canvas {
   opacity: 0;
   touch-action: none;
-  animation: fade-in 5s ease 1s forwards;
+  animation: fade-in 2s forwards;
 }
